# meta-spider

./: .gitignore  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  index.html  pyproject.toml
daimon/: __init__.py
daimon-agent/: README.md  pyproject.toml
daimon-agent/daimon_agent/: __init__.py  action.py  backends.py  bench.py  build.py  chat.py  cli.py  native.py  policy.py  prompt.py  react.py  runtime.py  serve.py  tasks.py
daimon-agent/examples/: react_demo.py  tau_lite_demo.py
daimon-agent/tests/: test_bench.py  test_build.py  test_latent.py  test_react.py  test_runtime.py
daimon-deploy/: MILESTONE0.md  README.md  pyproject.toml
daimon-deploy/daimon_deploy/: __init__.py  cli.py  export.py  spec.py  validate.py
daimon-deploy/results/: curve_behavioral.json  curve_cossim.json  meta.json
daimon-deploy/results/ca_testcase/: ca_doubter.pt  ca_sidecar.gguf
daimon-deploy/results/sel_testcase/: selective_doubter.pt  selective_sidecar.gguf
daimon-deploy/scripts/: behavioral_compare.py  build_gguf.sh  dump_ca_testcase.py  dump_encoder_testcase.py  dump_selective_testcase.py  export_prompts.py  offline_curve.py  run_extract.py  run_meta_generate.sh
daimon-deploy/tests/: test_export.py  test_spec_selective.py
daimon-loom/: README.md  pyproject.toml
daimon-loom/daimon_loom/: __init__.py  slice_forward.py
daimon-loom/daimon_loom/cli/: __init__.py  _common.py  build_anchor.py  build_universal.py  collect.py  eval.py  main.py  train.py
daimon-loom/daimon_loom/data/: __init__.py  agentic_mix.py  dataset.py  drift_sessions.py
daimon-loom/daimon_loom/evaluation/: __init__.py  agentic.py  agentic_suite.py  benchmark.py  comparison.py  harness.py  llm_judge.py
daimon-loom/daimon_loom/training/: __init__.py  chrono_anchor_trainer.py  collector.py  losses.py  trainer.py
daimon-voices/: README.md  pyproject.toml
daimon-voices/daimon_voices/: __init__.py  chrono_anchor.py  chronographer.py  config.py  doubter.py  goal_anchor.py  voice.py  watchdog.py
daimon-voices/daimon_voices/_chrono/: __init__.py  adaptive_memory_gate.py  emotional_encoder.py  episode_compressor.py  memory_cross_attention.py  persistent_memory_bank.py
docs-site/: README.md  index.html
examples/: chrono_anchor_agent.py
meta-agent/: README.md  pyproject.toml
meta-agent/examples/: react_demo.py  tau_lite_demo.py
meta-agent/meta_agent/: __init__.py  action.py  backends.py  bench.py  build.py  chat.py  cli.py  policy.py  prompt.py  react.py  runtime.py  session.py  stdtools.py  tools.py
meta-agent/tests/: test_bench.py  test_build.py  test_latent.py  test_react.py  test_runtime.py
meta-core/: README.md  pyproject.toml
meta-core/meta_core/: __init__.py  buffer.py  config.py  cross_attention.py  dynamic.py  hooks.py  model_utils.py  pipeline.py  quiet.py  registry.py  slice_forward.py  timing.py  watchdog.py
meta-core/meta_core/encoders/: __init__.py  base.py  multi_token.py  selective.py  transformer.py
meta-core/meta_core/modifiers/: __init__.py  base.py  doubter.py
meta-daimon/: README.md  pyproject.toml
meta-daimon/meta_daimon/: __init__.py  config.py  doubter.py  goal_anchor.py
meta-deploy/: README.md  pyproject.toml
meta-deploy/cpp/: CMakeLists.txt  build.sh  meta_anchor_encoder.cpp  meta_ca.cpp  meta_encoder.cpp  meta_selective.cpp  validate_anchor_encoder.py
meta-deploy/llama_patch/: README.md  meta-spider-llama.patch
meta-deploy/llama_patch/examples/extract-activations/: CMakeLists.txt  extract-activations.cpp
meta-deploy/llama_patch/examples/meta-anchor-session/: CMakeLists.txt  meta-anchor-session.cpp
meta-deploy/llama_patch/examples/meta-generate/: CMakeLists.txt  meta-generate.cpp
meta-deploy/meta_deploy/: __init__.py  cli.py  export.py  spec.py  validate.py
meta-deploy/scripts/: behavioral_compare.py  build_llama.sh  dump_ca_testcase.py  dump_encoder_testcase.py  dump_selective_testcase.py  offline_curve.py  run_meta_generate.sh
meta-deploy/tests/: test_export.py  test_spec_selective.py
meta-loom/: README.md  pyproject.toml
meta-loom/meta_loom/: __init__.py  cloud.py
meta-loom/meta_loom/cli/: __init__.py  _common.py  build_anchor.py  build_universal.py  collect.py  eval.py  main.py  train.py
meta-loom/meta_loom/data/: __init__.py  agentic_mix.py  code_spec_sessions.py  dataset.py  drift_sessions.py  splits.py
meta-loom/meta_loom/evaluation/: __init__.py  agentic.py  benchmark.py  comparison.py  harness.py  llm_judge.py
meta-loom/meta_loom/training/: __init__.py  collector.py  losses.py  trainer.py
meta_spider/: __init__.py
tests/: conftest.py  test_arbiter_fixes.py  test_boundary.py  test_build_anchor.py  test_build_universal.py  test_chrono_anchor.py  test_chrono_anchor_trainer.py  test_chronographer.py  test_cli.py  test_cloud.py  test_code_spec_sessions.py  test_daimon_split.py  test_deploy_anchor_export.py  test_drift_sessions.py  test_evaluation.py  test_goal_anchor.py  test_model_utils.py  test_pipeline.py  test_primitives.py  test_serve.py  test_slice.py  test_splits.py  test_training.py  test_watchdog.py
