[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "daimon"
version = "0.4.0"
description = "Pluggable cognitive voices (Doubter, GoalAnchor, ChronoAnchor) for any HuggingFace causal LM, on the meta-attention mechanism"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
    { name = "Reflexion Core contributors" },
]
keywords = ["llm", "introspection", "meta-attention", "interpretability", "alignment"]
classifiers = [
    "Development Status :: 1 - Planning",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

# Umbrella: re-exports the mechanism (meta-attention, under the Daimon* names) + the voices.
# The real code lives in the meta-attention library and the daimon-voices package.
dependencies = [
    "meta-attention>=0.1",
    "daimon-voices",
]

[project.optional-dependencies]
# eval-only quickstart: LLM judge via OpenRouter (Level 4)
eval = [
    # "requests>=2.31",
    # "python-dotenv>=1.0",
]
# train: extra deps for training voices (Level 3)
train = [
    # "tqdm>=4.66",
    # "transformers>=4.40",
]
dev = [
    "pytest>=7.4",
    # "ruff>=0.5",
    # "mypy>=1.8",
]

[project.urls]
Homepage = "https://github.com/Imperius/reflexion-core"
Documentation = "https://github.com/Imperius/reflexion-core/tree/main/daimon-framework-dev"

[tool.setuptools.packages.find]
include = ["daimon*"]
exclude = ["tests*", "examples*"]
