[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "daimon-agent"
version = "0.4.0"
description = "Agentic runtime + chat for two-pass meta-attention wrappers (Daimon Doubter). Latent decision → standard action vocabulary."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
    { name = "Reflexion Core contributors" },
]
keywords = ["llm", "agent", "tool-use", "meta-attention", "react"]
classifiers = [
    "Development Status :: 1 - Planning",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

# Core — pure Python: loop, tools, session, seam. No heavy dependencies.
dependencies = [
    "meta-attention>=0.1",
]

# Practical-use CLI: `daimon-agent chat/run` (loads model+Doubter via the meta-attention library).
[project.scripts]
daimon-agent = "daimon_agent.cli:main"

[project.optional-dependencies]
# Real policy on top of the wrapper: DaimonPolicy loads pipeline + Doubter through the
# meta-attention library (already a hard dependency); HF model loading needs transformers.
hf = [
    # "transformers>=4.40",
]
dev = [
    "pytest>=7.4",
]

[project.urls]
Homepage = "https://github.com/Imperius/reflexion-core"
Documentation = "https://github.com/Imperius/reflexion-core/tree/main/daimon-agent"

[tool.setuptools.packages.find]
include = ["daimon_agent*"]
exclude = ["tests*", "examples*"]
