[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "daimon-loom"
version = "0.4.0"
description = "Daimon Loom — training + benchmark-evaluation pipeline for meta-attention voices: Trainer, collector, losses, BaselineComparison (QA), AgentComparison (agentic, on daimon-agent), harness, LLM-judge."
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Reflexion Core contributors" }]
keywords = ["llm", "introspection", "meta-attention", "training", "evaluation"]
classifiers = [
    "Development Status :: 1 - Planning",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

# Loom builds on top of the core. Heavy train/eval deps are optional.
dependencies = [
    "daimon-voices",
    "daimon-agent",
    "numpy>=1.24",
    "meta-attention>=0.1",
]

[project.scripts]
metaloom = "daimon_loom.cli.main:main"

[project.optional-dependencies]
train = [
    # "transformers>=4.40",
    # "datasets>=2.18",
    # "tqdm>=4.66",
]
eval = [
    # "requests>=2.31",
    # "python-dotenv>=1.0",
]
dev = ["pytest>=7.4"]

[tool.setuptools.packages.find]
include = ["daimon_loom*"]
exclude = ["tests*"]
