[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "meta-agent"
version = "0.3.0"
description = "Agentic runtime + chat for two-pass meta-attention wrappers (Meta-Spider Doubter). Latent decision → standard action vocabulary."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
authors = [
    { name = "Reflexion Core contributors" },
]
keywords = ["llm", "agent", "tool-use", "meta-attention", "react"]
classifiers = [
    "Development Status :: 1 - Planning",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

# Core — pure Python: loop, tools, session, seam. No heavy dependencies.
dependencies = []

# Practical-use CLI: `meta-agent chat/run` (loads model+Doubter via meta-core).
[project.scripts]
meta-agent = "meta_agent.cli:main"

[project.optional-dependencies]
# Real policy on top of the wrapper: MetaSpiderPolicy loads pipeline + Doubter.
# Depends ONLY on the Meta-Core core (NOT on Meta-Loom — the training toolkit).
meta-core = [
    "meta-core",
    # "transformers>=4.40",
]
dev = [
    "pytest>=7.4",
]

[project.urls]
Homepage = "https://github.com/Imperius/reflexion-core"
Documentation = "https://github.com/Imperius/reflexion-core/tree/main/meta-agent"

[tool.setuptools.packages.find]
include = ["meta_agent*"]
exclude = ["tests*", "examples*"]
