[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "meta-daimon"
version = "0.4.0.dev0"
description = "Meta-Daimon — the injection modifiers (Doubter, GoalAnchor) for the Meta-Spider meta-attention mechanism"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Imperius" }]
dependencies = [
    "meta-core",
]

[project.urls]
Repository = "https://codeberg.org/imperius/meta-spider"
Documentation = "https://github.com/Imperius/reflexion-core/tree/main/meta-spider-framework-dev/meta-daimon"

[tool.setuptools.packages.find]
include = ["meta_daimon*"]
